backend/src/api/api.hpp

    
    typedef struct LeHandle LeHandle;
    typedef struct LeDesignId
    {
        uint32_t index;
        uint32_t generation;
    } LeDesignId;
    typedef struct LeAbstractId
    {
        uint32_t index;
        uint32_t generation;
    } LeAbstractId;
    int le_read_lef(LeHandle *handle, const char *path);
    int32_t le_message_count(LeHandle *handle);
    const char *le_message_at(LeHandle *handle, int32_t index);
    int le_set_current_design(LeHandle *handle, int32_t index);
    int le_set_current_design_by_id(LeHandle *handle, LeDesignId design_id);
    int32_t le_get_abstracts(LeHandle *handle, LeDesignId of_design, const char *filter_expression);
    typedef struct LeProperty
    {
        const char *name;
        int32_t type; 
        const char *string_value;
        int64_t int_value;
        double double_value;
    } LeProperty;
    LeProperty le_selected_object_property_at(LeHandle *handle, int32_t selection_index, int32_t property_index);
    typedef struct LeTerminalId
    {
        uint32_t index;
        uint32_t generation;
    } LeTerminalId;
    typedef struct LeTerminalPortId
    {
        uint32_t index;
        uint32_t generation;
    } LeTerminalPortId;
    int32_t le_terminal_property_count(LeHandle *handle, LeTerminalId id);
    LeProperty le_terminal_property_path(LeHandle *handle, LeTerminalId id, const char *path);
    int le_delete_terminal(LeHandle *handle, LeTerminalId id);
    int32_t le_search_terminal(LeHandle *handle, const char *filter_expression);
    LeTerminalId le_search_result_terminal_at(LeHandle *handle, int32_t index);
    int32_t le_get_terminals(LeHandle *handle, LeAbstractId of_abstract, const char *name_expression, const char *filter_expression);
    LeTerminalPortId le_create_terminal_port(LeHandle *handle, LeTerminalId terminal_id);
    int32_t le_terminal_port_property_count(LeHandle *handle, LeTerminalPortId id);
    LeProperty le_terminal_port_property_at(LeHandle *handle, LeTerminalPortId id, int32_t index);
    LeProperty le_terminal_port_property_path(LeHandle *handle, LeTerminalPortId id, const char *path);
    int le_delete_terminal_port(LeHandle *handle, LeTerminalPortId id);
    int32_t le_search_terminal_port(LeHandle *handle, const char *filter_expression);
    LeTerminalPortId le_search_result_terminal_port_at(LeHandle *handle, int32_t index);
    typedef struct LeShapeId
    {
        uint32_t index;
        uint32_t generation;
    } LeShapeId;
    LeShapeId le_create_terminal_port_shape(LeHandle *handle, LeTerminalPortId port_id, const char *layer_name);