flutter_plugin/lib/lef_editor_plugin_bindings_generated.dart


  /// @brief Delete the Terminal at `id`, cascading to every
  /// TerminalPort it owns first - unlike Root::delete_terminal's own
  /// no-cascade default (see its doc comment), a orphaned port here
  /// would be permanently unreachable garbage (TerminalPorts are only
  /// ever enumerated through their parent Terminal's own port list, no
  /// top-level "every TerminalPort" API exists), not just a stale
  /// reference that degrades gracefully elsewhere - a deliberate,
  /// domain-specific exception at this API layer, not a generic Root
  /// behavior. Returns 0 on success, nonzero if handle is null or id
  /// doesn't name a Terminal on this handle.
  int le_delete_terminal(ffi.Pointer<LeHandle> handle, LeTerminalId id) {
    return _le_delete_terminal(handle, id);
  }

  late final _le_delete_terminalPtr =
      _lookup<
        ffi.NativeFunction<
          ffi.Int Function(ffi.Pointer<LeHandle>, LeTerminalId)
        >
      >('le_delete_terminal');
  late final _le_delete_terminal = _le_delete_terminalPtr
      .asFunction<int Function(ffi.Pointer<LeHandle>, LeTerminalId)>();

  /// @brief Search every Terminal on this handle for
  /// `filter_expression` (UPDATES.md item 15's `-filter {...}`, e.g.
  /// ".name =~ IN*" - see backend/src/database/filter.hpp for the full
  /// grammar). Returns the number of matches (0 if handle or
  /// filter_expression is null, or if nothing matched), or -1 if
  /// filter_expression fails to parse (see le_message_count/
  /// le_message_at for the parse error, pushed the same way
  /// le_read_lef's own errors are). Results are cached on the handle
  /// until the next le_search_terminal call - read them via
  /// le_search_result_terminal_at, same "valid until the next call"
  /// convention as this API's other cached-result accessors
  /// (le_selected_object_property_at et al).
  int le_search_terminal(
    ffi.Pointer<LeHandle> handle,
    ffi.Pointer<ffi.Char> filter_expression,
  ) {
    return _le_search_terminal(handle, filter_expression);
  }

  late final _le_search_terminalPtr =
      _lookup<
        ffi.NativeFunction<
          ffi.Int32 Function(ffi.Pointer<LeHandle>, ffi.Pointer<ffi.Char>)
        >
      >('le_search_terminal');
  late final _le_search_terminal = _le_search_terminalPtr
      .asFunction<int Function(ffi.Pointer<LeHandle>, ffi.Pointer<ffi.Char>)>();

  /// @brief The LeTerminalId at `index` (0..le_search_terminal's last
  /// return value - 1) from the most recent le_search_terminal call on
  /// this handle. Returns an invalid id (index == UINT32_MAX) if
  /// handle is null or index is out of range.
  LeTerminalId le_search_result_terminal_at(
    ffi.Pointer<LeHandle> handle,
    int index,
  ) {
    return _le_search_result_terminal_at(handle, index);
  }

  late final _le_search_result_terminal_atPtr =
      _lookup<
        ffi.NativeFunction<
          LeTerminalId Function(ffi.Pointer<LeHandle>, ffi.Int32)
        >
      >('le_search_result_terminal_at');
  late final _le_search_result_terminal_at = _le_search_result_terminal_atPtr
      .asFunction<LeTerminalId Function(ffi.Pointer<LeHandle>, int)>();

  /// @brief Search Terminals (UPDATES.md item 19.1 - supersedes item
  /// 17's own single-filter-string `le_get_terminals`, this is the
  /// general contract every other le_get_* function in this API
  /// follows too). Three independent, each-optional axes:
  /// - `of_abstract` scopes to one Abstract's own Terminals (see
  /// le_get_abstracts) - pass an invalid id (e.g. a
  /// default-constructed LeAbstractId) to use the default scope
  /// instead: the currently selected Design's Abstract (item 17's
  /// "current view" - le_set_current_design/
  /// le_set_current_design_by_id), or none if no Design is
  /// selected.
  /// - `name_expression` glob-matches Terminal::name (Tcl `string
  /// match` semantics, e.g. "IN*") - pass null or "" to skip this
  /// axis (match every name).
  /// - `filter_expression` (see backend/src/database/filter.hpp) -
  /// pass null or "" to skip this axis. Only field/hop names this
  /// API recognizes as valid for Terminal are accepted - an
  /// unrecognized one is a validation error (item 19.1's own
  /// error-checking requirement), not silent no-match.
  /// A Terminal matches iff it satisfies every given axis. Shares
  /// le_search_terminal's result buffer - read results back via
  /// le_search_result_terminal_at. Returns the match count (0 if handle
  /// is null or nothing matched), or -1 if filter_expression fails to
  /// parse or references an unknown field/hop (see le_message_count/
  /// le_message_at for either error).
  int le_get_terminals(
    ffi.Pointer<LeHandle> handle,
    LeAbstractId of_abstract,
    ffi.Pointer<ffi.Char> name_expression,
    ffi.Pointer<ffi.Char> filter_expression,
  ) {
    return _le_get_terminals(
      handle,
      of_abstract,
      name_expression,
      filter_expression,
    );
  }

  late final _le_get_terminalsPtr =
      _lookup<
        ffi.NativeFunction<
          ffi.Int32 Function(
            ffi.Pointer<LeHandle>,
            LeAbstractId,
            ffi.Pointer<ffi.Char>,
            ffi.Pointer<ffi.Char>,
          )
        >
      >('le_get_terminals');
  late final _le_get_terminals = _le_get_terminalsPtr
      .asFunction<
        int Function(
          ffi.Pointer<LeHandle>,
          LeAbstractId,
          ffi.Pointer<ffi.Char>,
          ffi.Pointer<ffi.Char>,
        )
      >();

  /// @brief Create an empty TerminalPort owned by the Terminal at
  /// `terminal_id` - no shapes yet, see le_create_terminal_port_shape.
  /// Returns an invalid LeTerminalPortId (index == UINT32_MAX) if
  /// handle is null, or terminal_id doesn't name a Terminal on this
  /// handle.
  LeTerminalPortId le_create_terminal_port(
    ffi.Pointer<LeHandle> handle,
    LeTerminalId terminal_id,
  ) {
    return _le_create_terminal_port(handle, terminal_id);
  }

  late final _le_create_terminal_portPtr =
      _lookup<
        ffi.NativeFunction<
          LeTerminalPortId Function(ffi.Pointer<LeHandle>, LeTerminalId)
        >
      >('le_create_terminal_port');
  late final _le_create_terminal_port = _le_create_terminal_portPtr
      .asFunction<
        LeTerminalPortId Function(ffi.Pointer<LeHandle>, LeTerminalId)
      >();

  /// @brief Number of property rows for the TerminalPort at `id` - same
  /// by-id (not selection-scoped) shape as le_terminal_property_count.
  /// Rows: "shapes_count" (int), "port_class" (string) - cmg's
  /// generated to_properties() output for TerminalPortData, unchanged.
  /// Returns 0 if handle is null or id doesn't name a TerminalPort on
  /// this handle.
  int le_terminal_port_property_count(
    ffi.Pointer<LeHandle> handle,
    LeTerminalPortId id,
  ) {
    return _le_terminal_port_property_count(handle, id);
  }

  late final _le_terminal_port_property_countPtr =
      _lookup<
        ffi.NativeFunction<
          ffi.Int32 Function(ffi.Pointer<LeHandle>, LeTerminalPortId)
        >
      >('le_terminal_port_property_count');
  late final _le_terminal_port_property_count =
      _le_terminal_port_property_countPtr
          .asFunction<int Function(ffi.Pointer<LeHandle>, LeTerminalPortId)>();

  /// @brief The property row at `index`
  /// (0..le_terminal_port_property_count(id)-1) for the TerminalPort at
  /// `id`. Returns an all-null/zero row (LeProperty::name == nullptr)
  /// if handle is null, id doesn't name a TerminalPort on this handle,
  /// or index is out of range.
  LeProperty le_terminal_port_property_at(
    ffi.Pointer<LeHandle> handle,
    LeTerminalPortId id,
    int index,
  ) {
    return _le_terminal_port_property_at(handle, id, index);
  }

  late final _le_terminal_port_property_atPtr =
      _lookup<
        ffi.NativeFunction<
          LeProperty Function(
            ffi.Pointer<LeHandle>,
            LeTerminalPortId,
            ffi.Int32,
          )
        >
      >('le_terminal_port_property_at');
  late final _le_terminal_port_property_at = _le_terminal_port_property_atPtr
      .asFunction<
        LeProperty Function(ffi.Pointer<LeHandle>, LeTerminalPortId, int)
      >();

  /// @brief Resolve a dotted property path against the TerminalPort at
  /// `id` (e.g. `.port_class`, or chained through a hop like
  /// `.terminal.name`) - see le_terminal_property_path's own comment
  /// for the full grammar/validation/error contract.
  LeProperty le_terminal_port_property_path(
    ffi.Pointer<LeHandle> handle,
    LeTerminalPortId id,
    ffi.Pointer<ffi.Char> path,
  ) {
    return _le_terminal_port_property_path(handle, id, path);
  }

  late final _le_terminal_port_property_pathPtr =
      _lookup<
        ffi.NativeFunction<
          LeProperty Function(
            ffi.Pointer<LeHandle>,
            LeTerminalPortId,
            ffi.Pointer<ffi.Char>,
          )
        >
      >('le_terminal_port_property_path');
  late final _le_terminal_port_property_path =
      _le_terminal_port_property_pathPtr
          .asFunction<
            LeProperty Function(
              ffi.Pointer<LeHandle>,
              LeTerminalPortId,
              ffi.Pointer<ffi.Char>,
            )
          >();

  /// @brief Delete the TerminalPort at `id`, cascading to every Shape
  /// it owns first - same reasoning as le_delete_terminal's own cascade
  /// to TerminalPorts (see its doc comment): a Shape is pooled
  /// (TCL_EXPLORATION.md Phase 3) and only ever reachable through its
  /// parent's shape list, so leaving it behind would be permanently
  /// unreachable garbage, not just a dangling reference. Returns 0 on
  /// success, nonzero if handle is null or id doesn't name a
  /// TerminalPort on this handle.
  int le_delete_terminal_port(
    ffi.Pointer<LeHandle> handle,
    LeTerminalPortId id,
  ) {
    return _le_delete_terminal_port(handle, id);
  }

  late final _le_delete_terminal_portPtr =
      _lookup<
        ffi.NativeFunction<
          ffi.Int Function(ffi.Pointer<LeHandle>, LeTerminalPortId)
        >
      >('le_delete_terminal_port');
  late final _le_delete_terminal_port = _le_delete_terminal_portPtr
      .asFunction<int Function(ffi.Pointer<LeHandle>, LeTerminalPortId)>();

  /// @brief Search every TerminalPort on this handle for
  /// `filter_expression` - see le_search_terminal's own comment for the
  /// full contract (grammar, error/caching behavior); identical here,
  /// just scoped to TerminalPort (e.g. ".terminal.name =~ IN*" or
  /// ".shapes.layer_name == M4", both straight from UPDATES.md item
  /// 15's own example). Returns the match count, or -1 on a parse
  /// error.
  int le_search_terminal_port(
    ffi.Pointer<LeHandle> handle,
    ffi.Pointer<ffi.Char> filter_expression,
  ) {
    return _le_search_terminal_port(handle, filter_expression);
  }

  late final _le_search_terminal_portPtr =
      _lookup<
        ffi.NativeFunction<
          ffi.Int32 Function(ffi.Pointer<LeHandle>, ffi.Pointer<ffi.Char>)
        >
      >('le_search_terminal_port');
  late final _le_search_terminal_port = _le_search_terminal_portPtr
      .asFunction<int Function(ffi.Pointer<LeHandle>, ffi.Pointer<ffi.Char>)>();

  /// @brief The LeTerminalPortId at `index` from the most recent
  /// le_search_terminal_port call - see le_search_result_terminal_at's
  /// own comment for the general contract.
  LeTerminalPortId le_search_result_terminal_port_at(
    ffi.Pointer<LeHandle> handle,
    int index,
  ) {
    return _le_search_result_terminal_port_at(handle, index);
  }

  late final _le_search_result_terminal_port_atPtr =
      _lookup<
        ffi.NativeFunction<
          LeTerminalPortId Function(ffi.Pointer<LeHandle>, ffi.Int32)
        >
      >('le_search_result_terminal_port_at');
  late final _le_search_result_terminal_port_at =
      _le_search_result_terminal_port_atPtr
          .asFunction<LeTerminalPortId Function(ffi.Pointer<LeHandle>, int)>();
